# auditrs

./: .gitignore  Cargo.toml  Config.toml  Filters.toml  README.md  roadmap.md  rustfmt.toml
.github/workflows/: docs.yml  publish-docs.yml  rust.yml
data-discovery/: .gitignore  README.md  explore.ipynb  pyproject.toml
import/: Filters.ars  Filters.toml
scripts/: demo.sh  initialize_with_watches.sh  redump.sh  reset_auditrs.sh  trigger_and_view_primary.sh
src/: audit_types.rs  cli.rs  config.rs  correlator.rs  daemon.rs  event.rs  lib.rs  main.rs  parsed_record.rs  parser.rs  raw_record.rs  record.rs  record_from_source.rs  state.rs  utils.rs  writer.rs
src/audit_transport/: mock.rs  mod.rs  netlink.rs  traits.rs
src/cli/: cli.rs  dispatcher.rs  mod.rs
src/config/: auditctl.rs  config.rs  filters.rs  input_utils.rs  mod.rs  state.rs
src/config/filters/: filters.rs  mod.rs
src/config/watches/: mod.rs  watches.rs
src/core/: mod.rs
src/core/correlator/: correlator.rs  event.rs  mod.rs
src/core/enricher/: enricher.rs  mod.rs
src/core/netlink/: mod.rs  netlink.rs  raw_record.rs  (+1 more)
src/correlator/: correlator.rs  event.rs  mod.rs
src/daemon/: auditd_preflight.rs  control.rs  daemon.rs  mod.rs  worker.rs
src/enricher/: mod.rs
src/netlink/: mock.rs  mod.rs  netlink.rs  raw_record.rs
src/parser/: audit_types.rs  mod.rs  parser.rs
src/rules/: auditctl.rs  kernel_watches.rs  mod.rs
src/tools/: dump.rs  mod.rs  reading_utils.rs  report.rs  search.rs
src/utils/: input_utils.rs  mod.rs  reading_utils.rs  serde_systemtime.rs  utils.rs
src/writer/: mod.rs  writer.rs
tests/: coverage.txt  daemon_tests.rs  test_source_log.rs
(+9 files in other folders)
