[package]
name = "auditrs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/downloadjpg/auditrs"

[dependencies]
libc = "0.2.178"
strum = "0.27.2"
strum_macros = "0.27.2"
futures = "0.3"
audit = "0.7.3"
netlink-packet-core = "0.7.0"
env_logger = "0.11.8"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
nom = "8.0.0"
anyhow = "1.0.102"
