[package]
name = "auditrs"
version = "0.3.0"
edition = "2024"
authors = ["Rami Darwiche <rami.darwiche@ufl.edu>", "Callie Foster <brodricfoster@ufl.edu>", "Esse Ciego <esse@ece.ufl.edu>", "Jonathan Xavioer <jxavioer@ufl.edu>", "Mahika Kakkad <mahika.kakkad@ufl.edu>"]
repository = "https://github.com/Rowdy-Rustiles/auditrs"
default-run="auditrs"

[dependencies]
libc = "0.2.178"
strum = "0.27.2"
strum_macros = "0.27.2"
futures = "0.3"
audit = "0.7.3"
netlink-packet-core = "0.7.0"
env_logger = "0.11.8"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
nom = "8.0.0"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
config = "0.15.19"
toml = "0.8"
    
[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"